Tue May 25 01:50:17 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_i2d_ASN1_TYPE, ossl_ASN1_TYPE_free):
	  workaround for the versions earlier than OpenSSL-0.9.7.

Mon May 24 10:46:26 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/rdoc/generators/template/html/html.rb: SYSTEM identifiers
	  must be absolute URIs

Sat May 22 11:54:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* MANIFEST: add test/openssl/test_x509store.rb.

	* ext/tk/MANIFEST: add recent files.

Sat May 22 05:37:11 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/remote-tk.rb: (NEW library) controll Tk interpreters
	  on the other processes by Tcl/Tk's 'send' command

Fri May 21 09:22:05 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_method_parameters):
	  Add ()'s around parameters that don't have them

Fri May 21 02:21:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb: fixed a few bugs around multi char record/field separator.

	* test/csv/test_csv.rb: added boundary test for above feature.

Thu May 20 17:02:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (check_sizeof): define result size.  [ruby-core:02911]

	* lib/mkmf.rb (create_header): macro name should not include equal
	  sign.

Thu May 20 14:35:52 2004  Tanaka Akira  <akr@m17n.org>

	* ext/socket/socket.c: check SCM_RIGHTS macro addition to
	  the msg_control field to test existence of file descriptor passing
	  by msg_control.

Thu May 20 12:38:06 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_eq): alway check if operands are NaN.
	  [ruby-list:39685]

Thu May 20 12:34:39 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_visibility):
	  At Ryan Davis' suggestion, honor visibility modifers if guarded by a
	  statement modifier

Thu May 20 12:22:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
